# VideoPlayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: .clang-format  .qmake.stash  VideoPlayer.pro  VideoPlayer.sln  VideoPlayer.vcxproj  VideoPlayer.vcxproj.filters  about.cpp  about.h  about.ui  app_settings.cpp  app_settings.h  audio_decode_thread.cpp  audio_decode_thread.h  audio_effect_gl.cpp  audio_effect_gl.h  audio_effect_helper.cpp  audio_effect_helper.h  audio_play.cpp  audio_play.h  audio_play_thread.cpp  audio_play_thread.h  clear.bat  clickable_slider.cpp  clickable_slider.h  common.cpp  common.h  decode_thread.cpp  decode_thread.h  ffmpeg_decode.cpp  ffmpeg_decode.h  ffmpeg_init.cpp  ffmpeg_init.h  imagecv_operations.cpp  imagecv_operations.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+45 more)
src/debug/: VideoPlayer.exe.recipe  VideoPlayer.ilk  VideoPlayer.vcxproj.FileListAbsolute.txt  moc_about.cpp  moc_audio_decode_thread.cpp  moc_audio_play.cpp  moc_audio_play_thread.cpp  moc_decode_thread.cpp  moc_mainwindow.cpp  moc_predefs.h  moc_read_thread.cpp  moc_subtitle_decode_thread.cpp  moc_video_decode_thread.cpp  moc_video_play_thread.cpp  moc_youtube_url_dlg.cpp  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp
src/ffmpeg/: libs.txt
src/ffmpeg/doc/: fate.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-utils.html  ffmpeg.html  ffplay-all.html  ffplay.html  ffprobe-all.html  ffprobe.html  general.html
src/ffmpeg/include/libavutil/: ffversion.h
src/ffmpeg/lib/: avcodec-59.def  avcodec.lib  avdevice.lib  avfilter.lib  avformat-59.def  avformat.lib  avutil-57.def  avutil-58.def  avutil-59.def  avutil.lib  postproc.lib  swresample.lib  swscale.lib
src/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
src/release/: VideoPlayer.exe.recipe  VideoPlayer.vcxproj.FileListAbsolute.txt  moc_decode_thread.cpp  moc_video_play_thread.cpp
src/tools/: get_yt_url.py  readme.txt  youtube_download.py
